# qubit-agent

./: .gitignore  .gitmodules  README.md  biome.json  bunfig.toml  drizzle.config.ts  package.json  tsconfig.json
docs/: AGENT_STABILITY_REVIEW.md  ARCHITECTURE.md  ENVIRONMENT_MANAGER_DESIGN.md  FACTOR_RULE_STRATEGY_DESIGN.md  HITL_REDESIGN.md  LOOP_DRIVERS.md  MEMORY_V2_DESIGN.md  MONITORING_V2_DESIGN.md  P0_REMEDIATION_PLAN.md  PIXEL_OFFICE_ART_UPGRADE_PLAN.md  PIXEL_OFFICE_EXTENSIBILITY.md  QUANT_AGENT_PRODUCT_ROADMAP_P0_P2.md  QUANT_READINESS_ASSESSMENT.md  SELF_EVOLVING_AGENT_DESIGN.md  SELF_EVOLVING_AGENT_P10_BACKLOG.md  TOKEN_EFFICIENCY_ROADMAP_P0_P2.md  TOOL_MCP_RELIABILITY_AND_EVOLUTION_REVIEW.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
python_connectors/: broker_http_server.py  code_sandbox_runner.py  connector_runner.py  qlib_compute_runner.py  requirements.txt  veighna_ems_server.py
scripts/: _analyze_langgraph_checkpoint.ts  _assess_5_capabilities.ts  _cleanup_test_workspaces.ts  _cleanup_workflows.ts  _db_size_breakdown.ts  _diag_factor_autoeval.ts  _diag_fk_fail.ts  _purge_old_bak.ts  _purge_orphan_checkpoints.ts  _test-mcp-spawn.ts  agent-health-report.ts  agent-readiness-runner.ts  batch-token-benchmark.ts  build-app.sh  build-backend.sh  build-python-wheels.sh  cleanup-old-workflows.ts  dev-backend.sh  install-git-hooks.sh  (+7 more)
src/: cli.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-backend-commands.toml
src-tauri/src/: lib.rs  main.rs
(+1182 files in other folders)
